src/test/fail/invalid_class_name.lly
#[
SyntaxError: 'A' is not a valid class name (too short).
Where: File "test/fail/invalid_class_name.lly" at line 6
]#

class A() {}
